# CITD

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.sh  docker_build.sh  heroku.yml  run.sh
backend/: Cargo.toml  README.md
backend/connect_in_the_dark/: Cargo.toml
backend/connect_in_the_dark/src/: types.rs
backend/server/: Cargo.toml
backend/server/src/: data_types.rs  game_engine.rs  handler.rs  lib.rs  main.rs  shared_types.rs  ws.rs
backend/sessions/: Cargo.toml
backend/sessions/src/: session_types.rs
frontend/: .env  .env.local  .eslintrc.json  .gitignore  README.md  environment.ts  package-lock.json  package.json
frontend/pages/: _app.tsx  index.tsx
frontend/pages/components/: game.tsx  lobby.tsx  login.tsx  menu.tsx  quick-join.tsx
frontend/providers/: game.provider.tsx  notification.provider.ts  provider.d.ts  route-updater.provider.ts  screen.provider.ts  server-connecton.provider.ts  session.provider.tsx
frontend/utils/: shared-types.ts  websocket-client.ts
scripts/: convert_rust_events_to_ts.py
shared/scripts/: convert_rust_events_to_ts.py
