[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sessions = { path = "../sessions"}
connect_in_the_dark = { path = "../connect_in_the_dark"}

tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
futures = { version = "0.3", default-features = false }
nanoid = "0.4.0"
nanorand = "0.5.2"
